# PyFinanceTracker_Project

./: README.md  pyproject.toml
src/app/: ai.py  main.py  models.py  routes.py  schemas.py
src/app/chatgpt/: client.py  prompt.py
src/app/models/: ai_consumption.py  category.py  expense.py
src/app/routers/: ai_response.py  category.py  expense.py
src/app/schemas/: ai_response.py  expense.py
